--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
 			<p>To<br/>
-			<span>S. H. J. Cox</span><br/>
+			<span><abbr epub:type="z3998:given-name">S. H. J.</abbr> Cox</span><br/>
 			because for once he did not guess it</p>
 		</section>
 	</body>
